z-index to fix button not working

--- a/src/Component/DownloadBTN.css
+++ b/src/Component/DownloadBTN.css
@@ -7,6 +7,7 @@
   text-align: center;
   height: 360px;
   width: 200px;
+  z-index: 100;
 }
 
 .button_inner {
